@@ -3,6 +3,8 @@ Jython NEWS
 Jython 2.7b4
   Bugs Fixed
     - [ 2037 ] Byte-string containing elements greater than 255
+    - [ 2244 ] Weak testing of real math module
+    - [ 2237 ] Test failures with float and complex
 
 Jython 2.7b3
   Bugs Fixed
